--- a/news.html
+++ b/news.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/d">web page software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5z" data-rv-view="51" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/l">free bootstrap theme</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5z" data-rv-view="51" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -95,7 +95,7 @@
 
 
               <div class="mbr-table-cell col-md-5 text-xs-center text-md-left content-size">
-                  <h3 class="mbr-section-title display-2"><br><br></h3>
+                  <h3 class="mbr-section-title display-2"></h3>
                   
 
                   
@@ -114,7 +114,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><blockquote><span style="font-size: 1.09rem; font-style: normal;"><strong>［ 2018預約規則 ］</strong></span><br></blockquote><blockquote><span style="font-style: normal;">休修臉一律採取預約制度，因為預約人數比較多，為了保障服務客人的權益，也顧及大家的完美品質，只好更動以下預約規則，如有不便之處敬請見諒。</span></blockquote><blockquote><p><span style="font-style: normal;"><strong>［新客人第一次預約］</strong></span></p></blockquote><blockquote><span style="font-style: normal;">若需取消或更改時間，請在前一天營業時間或提前內告知，若無告知，當日取消或沒回應沒來，將無法再約下一次預約。</span></blockquote><blockquote><span style="font-style: normal;">(新客無法做當天更改時間，若當日更改則算當日取消，若需更改時間，請在前一天營業時間內告知)</span></blockquote><blockquote><span style="font-style: normal;"><strong>［已來過本店儲值或包療程客人］</strong></span></blockquote><blockquote><p><span style="font-style: normal;">若需取消或更改時間，請在前一天營業時間內告知，若超過兩次以上（包含兩次）當日取消，休修臉有權拒絕服務您。</span></p><p><span style="font-style: normal;"><br></span></p></blockquote><blockquote><span style="font-style: normal;">當日預約超過15分鐘者，視為遲到（遲到只能選擇減少時間或無法為您服務）</span></blockquote><blockquote><span style="font-style: normal;">每次預約我們將為你保留15分鐘，如您未能在保留時間抵達，為了不影響下一位客人的權利與寶貴的時間，這邊有縮短或取消療程的權力。</span></blockquote><blockquote><span style="font-style: normal;">如因故必須取消或重新安排預約時間，請於預約日前一天私訊告知取消，如果未能符合將視為當日取消，如有不便之處敬請見諒。</span></blockquote></div>
+            <div class="col-xs-12 lead"><blockquote><span style="font-size: 1.09rem; font-style: normal;"><strong>［ 2019預約規則 ］</strong></span><br></blockquote><blockquote><span style="font-style: normal;">休修臉一律採取預約制度，因為預約人數比較多，為了保障服務客人的權益，也顧及大家的完美品質，只好更動以下預約規則，如有不便之處敬請見諒。</span></blockquote><blockquote><p><span style="font-style: normal;"><strong>［新客人第一次預約］</strong></span></p></blockquote><blockquote><span style="font-style: normal;">若需取消或更改時間，請在前一天營業時間或提前內告知，若無告知，當日取消或沒回應沒來，將無法再約下一次預約。</span></blockquote><blockquote><span style="font-style: normal;">(新客無法做當天更改時間，若當日更改則算當日取消，若需更改時間，請在前一天營業時間內告知)</span></blockquote><blockquote><span style="font-style: normal;"><strong>［已來過本店儲值或包療程客人］</strong></span></blockquote><blockquote><p><span style="font-style: normal;">若需取消或更改時間，請在前一天營業時間內告知，若超過兩次以上（包含兩次）當日取消，休修臉有權拒絕服務您。</span></p><p><span style="font-style: normal;"><br></span></p></blockquote><blockquote><span style="font-style: normal;">當日預約超過15分鐘者，視為遲到（遲到只能選擇減少時間或無法為您服務）</span></blockquote><blockquote><span style="font-style: normal;">每次預約我們將為你保留15分鐘，如您未能在保留時間抵達，為了不影響下一位客人的權利與寶貴的時間，這邊有縮短或取消療程的權力。</span></blockquote><blockquote><span style="font-style: normal;">如因故必須取消或重新安排預約時間，請於預約日前一天私訊告知取消，如果未能符合將視為當日取消，如有不便之處敬請見諒。</span></blockquote></div>
         </div>
     </div>
 
