--- a/news.html
+++ b/news.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-5a" data-rv-view="180">
+<section id="ext_menu-5a" data-rv-view="104">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">website maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5z" data-rv-view="178" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/l">bootstrap themes</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5z" data-rv-view="102" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -68,7 +68,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-7w" data-rv-view="182" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-7w" data-rv-view="106" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -79,7 +79,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="msg-box5-7z" data-rv-view="184" style="padding-top: 0px; padding-bottom: 80px;">
+<section class="mbr-section" id="msg-box5-7z" data-rv-view="108" style="padding-top: 0px; padding-bottom: 80px;">
 
     
     <div class="container">
@@ -109,7 +109,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-7v" data-rv-view="189" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section article mbr-section__container" id="content2-7v" data-rv-view="113" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 60px;">
 
     <div class="container">
         <div class="row">
@@ -119,7 +119,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-7x" data-rv-view="191" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-7x" data-rv-view="115" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -129,7 +129,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4z" data-rv-view="187" style="background-color: rgb(40, 50, 78); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4z" data-rv-view="111" style="background-color: rgb(40, 50, 78); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
