--- a/page24.html
+++ b/page24.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-80" data-rv-view="101">
+<section id="ext_menu-80" data-rv-view="388">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -58,7 +58,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/e">web creation software</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
