--- a/page26.html
+++ b/page26.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-9b" data-rv-view="138">
+<section id="ext_menu-9b" data-rv-view="413">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/l">free bootstrap themes</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-9a" data-rv-view="136" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/e">website design software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-9a" data-rv-view="411" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -68,7 +68,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="msg-box5-9d" data-rv-view="142" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section" id="msg-box5-9d" data-rv-view="417" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -102,7 +102,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-9c" data-rv-view="140" style="background-color: rgb(40, 50, 78); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-9c" data-rv-view="415" style="background-color: rgb(40, 50, 78); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
