--- a/page7.html
+++ b/page7.html
@@ -69,7 +69,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="mbr-section article mbr-section__container" id="content1-97" data-rv-view="353" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/l">bootstrap theme</a></section><section class="mbr-section article mbr-section__container" id="content1-97" data-rv-view="353" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
