--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/i">how to build a website for free</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features3-1" data-rv-view="3" style="background-color: rgb(40, 50, 78);">
+<section class="engine"><a href="https://mobirise.co/c">web site maker</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features3-1" data-rv-view="3" style="background-color: rgb(40, 50, 78);">
 
     
 
