--- a/news.html
+++ b/news.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-5a" data-rv-view="45">
+<section id="ext_menu-5a" data-rv-view="476">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="menu.html" target="_blank">服務項目</a></li><li class="nav-item"><a class="nav-link link" href="https://line.me/R/ti/p/%40llr0044b" target="_blank">LINE ME</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="menu.html" target="_blank" data-toggle="dropdown-submenu" aria-expanded="false">服務項目</a></li><li class="nav-item"><a class="nav-link link" href="https://line.me/R/ti/p/%40llr0044b" target="_blank">LINE ME</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">create a website for free</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5z" data-rv-view="43" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap carousel</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5z" data-rv-view="474" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -68,7 +68,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-7w" data-rv-view="47" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-7w" data-rv-view="478" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -79,27 +79,27 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-7v" data-rv-view="54" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 60px;">
+<section class="mbr-section article mbr-section__container" id="content2-7v" data-rv-view="482" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 60px;">
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><blockquote><span style="font-size: 1.09rem; font-style: normal;"><strong>［ 預約須知 ］</strong></span><br></blockquote><blockquote><span style="font-style: normal;">休修臉一律採取預約制度，因為預約人數比較多，為了保障服務客人的權益，也顧及大家的完美品質，只好更動以下預約規則，如有不便之處敬請見諒。</span></blockquote><blockquote><p><span style="font-style: normal;"><strong>［新客人第一次預約］</strong></span></p></blockquote><blockquote><span style="font-style: normal;">若需取消或更改時間，請在前一天營業時間或提前內告知，若無告知，當日取消或沒回應沒來，將無法再約下一次預約。</span></blockquote><blockquote><span style="font-style: normal;">(新客無法做當天更改時間，若當日更改則算當日取消，若需更改時間，請在前一天營業時間內告知)</span></blockquote><blockquote><p><span style="font-style: normal;"><strong>［已來過本店儲值或包療程客人］</strong></span></p></blockquote><blockquote><p><span style="font-style: normal;">若需取消或更改時間，請在前一天營業時間內告知，若超過兩次以上（包含兩次）當日取消，休修臉有權拒絕服務您。</span></p><p><span style="font-style: normal;"><br></span></p></blockquote><blockquote><p><span style="font-style: normal;">當日預約超過15分鐘者，視為遲到</span></p><p><span style="font-style: normal;">（遲到只能選擇減少時間或無法為您服務）</span></p></blockquote><blockquote><span style="font-style: normal;">每次預約我們將為你保留10分鐘，如您未能在保留時間抵達，為了不影響下一位客人的權利與寶貴的時間，這邊有縮短或取消療程的權力。</span></blockquote><blockquote><span style="font-style: normal;">如因故必須取消或重新安排預約時間，請於預約日前一天私訊告知取消，如果未能符合將視為當日取消，如有不便之處敬請見諒。</span></blockquote></div>
+            <div class="col-xs-12 lead"><blockquote><p><span style="font-size: 1.09rem; font-style: normal;"><strong>［ 預約須知 ］</strong></span></p></blockquote><blockquote><span style="font-style: normal;">休修臉一律採取預約制度，因為預約人數比較多，為了保障服務客人的權益，也顧及大家的完美品質，只好更動以下預約規則，如有不便之處敬請見諒。</span></blockquote><blockquote><p><span style="font-style: normal;"><strong>［新客人第一次預約］</strong></span></p></blockquote><blockquote><span style="font-style: normal;">若需取消或更改時間，請在前一天營業時間或提前內告知，若無告知，當日取消或沒回應沒來，將無法再約下一次預約。</span></blockquote><blockquote><span style="font-style: normal;">(新客無法做當天更改時間，若當日更改則算當日取消，若需更改時間，請在前一天營業時間內告知)</span></blockquote><blockquote><p><span style="font-style: normal;"><strong>［已來過本店儲值或包療程客人］</strong></span></p></blockquote><blockquote><p><span style="font-style: normal;">若需取消或更改時間，請在前一天營業時間內告知，若超過兩次以上（包含兩次）當日取消，休修臉有權拒絕服務您。</span></p><p><span style="font-style: normal;"><br></span></p></blockquote><blockquote><p><span style="font-style: normal;">當日預約超過15分鐘者，視為遲到</span></p><p><span style="font-style: normal;">（遲到只能選擇減少時間或無法為您服務）</span></p></blockquote><blockquote><span style="font-style: normal;">每次預約我們將為你保留10分鐘，如您未能在保留時間抵達，為了不影響下一位客人的權利與寶貴的時間，這邊有縮短或取消療程的權力。</span></blockquote><blockquote><span style="font-style: normal;">如因故必須取消或重新安排預約時間，請於預約日前一天私訊告知取消，如果未能符合將視為當日取消，如有不便之處敬請見諒。</span></blockquote></div>
         </div>
     </div>
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-7x" data-rv-view="56" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-7x" data-rv-view="484" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p><strong><span style="font-size: 1.07rem;">【當日取消者或是當日遲到的將無法享有店內折扣優惠】</span><br></strong></p><p><strong>以上規定是為了保障各位顧客的權益</strong></p><p><strong>不便之處敬請見諒😊</strong></p></div>
+            <div class="col-xs-12 lead"><p><strong><br></strong></p><p><strong>【取消者或是當日遲到的將無法享有店內折扣優惠】</strong></p><p><strong>以上規定是為了保障各位顧客的權益</strong></p><p><strong>不便之處敬請見諒😊</strong></p></div>
         </div>
     </div>
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4z" data-rv-view="52" style="background-color: rgb(40, 50, 78); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4z" data-rv-view="480" style="background-color: rgb(40, 50, 78); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
