--- a/page7.html
+++ b/page7.html
@@ -54,7 +54,7 @@
                             <span class="mbr-price-value">體驗價$</span>
                             <span class="mbr-price-figure"><strong>999</strong></span><small class="mbr-price-term">/ 75min.</small>
                           </div>
-                          <small class="mbr-plan-price-desc">（療程四送一）</small>
+                          <small class="mbr-plan-price-desc">&nbsp;&nbsp;</small>
                       </div>
                     </div>
                     <div class="mbr-plan-body card-block">
@@ -69,7 +69,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap carousel</a></section><section class="mbr-section article mbr-section__container" id="content1-97" data-rv-view="95" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/b">web page creator</a></section><section class="mbr-section article mbr-section__container" id="content1-97" data-rv-view="95" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
